--- a/BOKiN/View/NewsTableViewCell/NewsTableViewCell.xib
+++ b/BOKiN/View/NewsTableViewCell/NewsTableViewCell.xib
@@ -12,43 +12,73 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="160" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="BOKiN" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="173"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="267" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="BOKiN" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="280"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="172.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="279.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gcw-70-uOV" userLabel="NewsView">
-                        <rect key="frame" x="10" y="10" width="300" height="152.5"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gcw-70-uOV" userLabel="NewsView">
+                        <rect key="frame" x="10" y="10" width="300" height="259.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Label Label Label Label Label Label Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AG5-dG-9Eo">
-                                <rect key="frame" x="10" y="10" width="280" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tXp-AA-bmH">
-                                <rect key="frame" x="10" y="51" width="280" height="101.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pWr-y7-8WP">
+                                <rect key="frame" x="10" y="10" width="280" height="239.5"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsd-XC-ztu" userLabel="NewsTitleLabel">
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="S1a-yO-zj2"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MGW-n7-bUF" userLabel="SummaryLabel">
+                                        <rect key="frame" x="0.0" y="40" width="280" height="100"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="3kN-aS-3i3"/>
+                                        </constraints>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="詳しく見る" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2p-TH-jEe">
+                                        <rect key="frame" x="0.0" y="140" width="280" height="69.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oJH-9t-Uah">
+                                        <rect key="frame" x="0.0" y="209.5" width="280" height="15"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="15" id="Ueu-N8-zth"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5EJ-IK-mZ9" userLabel="DateTimeLabel">
+                                        <rect key="frame" x="0.0" y="224.5" width="280" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="15" id="7j2-nx-68V"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="tXp-AA-bmH" firstAttribute="leading" secondItem="Gcw-70-uOV" secondAttribute="leading" constant="10" id="53N-hu-Bq2"/>
-                            <constraint firstAttribute="trailing" secondItem="tXp-AA-bmH" secondAttribute="trailing" constant="10" id="Nm2-1Q-ADy"/>
-                            <constraint firstItem="AG5-dG-9Eo" firstAttribute="top" secondItem="Gcw-70-uOV" secondAttribute="top" constant="10" id="O4R-a4-gaL"/>
-                            <constraint firstItem="tXp-AA-bmH" firstAttribute="top" secondItem="AG5-dG-9Eo" secondAttribute="bottom" id="ZjE-2O-d57"/>
-                            <constraint firstAttribute="bottom" secondItem="tXp-AA-bmH" secondAttribute="bottom" id="dc7-Oa-pw8"/>
-                            <constraint firstAttribute="trailing" secondItem="AG5-dG-9Eo" secondAttribute="trailing" constant="10" id="nLL-cm-WKI"/>
-                            <constraint firstItem="AG5-dG-9Eo" firstAttribute="leading" secondItem="Gcw-70-uOV" secondAttribute="leading" constant="10" id="r8r-NE-zPL"/>
+                            <constraint firstItem="pWr-y7-8WP" firstAttribute="top" secondItem="Gcw-70-uOV" secondAttribute="top" constant="10" id="KZf-tW-SLL"/>
+                            <constraint firstAttribute="bottom" secondItem="pWr-y7-8WP" secondAttribute="bottom" constant="10" id="QKN-yv-IkL"/>
+                            <constraint firstAttribute="trailing" secondItem="pWr-y7-8WP" secondAttribute="trailing" constant="10" id="Uz2-zd-EBU"/>
+                            <constraint firstItem="pWr-y7-8WP" firstAttribute="leading" secondItem="Gcw-70-uOV" secondAttribute="leading" constant="10" id="ugr-oO-NB2"/>
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" red="0.94270829107555643" green="0.72054101001880799" blue="0.22889870016595848" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="Gcw-70-uOV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="WQg-lD-mSx"/>
                     <constraint firstItem="Gcw-70-uOV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="aYm-iY-od5"/>
@@ -58,11 +88,12 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="descriptionTextView" destination="tXp-AA-bmH" id="D0N-b3-bhN"/>
-                <outlet property="newsTitleLabel" destination="AG5-dG-9Eo" id="Ea8-3N-0nV"/>
-                <outlet property="newsView" destination="Gcw-70-uOV" id="bHm-ga-dNG"/>
+                <outlet property="newsDateTimeLabel" destination="5EJ-IK-mZ9" id="Jnp-Ab-IwD"/>
+                <outlet property="newsTitleLabel" destination="Lsd-XC-ztu" id="I2M-R7-WSA"/>
+                <outlet property="newsView" destination="Gcw-70-uOV" id="1X8-8x-QJg"/>
+                <outlet property="summaryTextView" destination="MGW-n7-bUF" id="CBv-Dq-HbM"/>
             </connections>
-            <point key="canvasLocation" x="137.59999999999999" y="75.112443778110944"/>
+            <point key="canvasLocation" x="137.59999999999999" y="122.33883058470765"/>
         </tableViewCell>
     </objects>
 </document>
