--- a/BOKiN/Storyboard/Base.lproj/Main.storyboard
+++ b/BOKiN/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cGl-NH-yMq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FSD-Wh-idi">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,22 +10,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
-        <scene sceneID="URQ-ef-I0z">
+        <!--Disaster-->
+        <scene sceneID="yz3-8Q-z3u">
             <objects>
-                <viewController id="h3A-GH-77U" customClass="DisastersViewController" customModule="BOKiN" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="tzm-vP-tfm">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RYk-fy-0sU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="FSD-Wh-idi" userLabel="Disaster" customClass="DisastersViewController" customModule="BOKiN" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="I21-PM-J5g">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eW9-RY-pfw">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MNx-hc-een">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DisastersTableViewCell" rowHeight="80" id="xGJ-rG-vG6" customClass="DisastersTableViewCell" customModule="BOKiN" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DisastersTableViewCell" rowHeight="80" id="Ilx-HN-9Xf" customClass="DisastersTableViewCell" customModule="BOKiN" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xGJ-rG-vG6" id="Dm6-BO-fcf">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ilx-HN-9Xf" id="9Sr-N9-1tp">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
@@ -35,99 +36,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="eW9-RY-pfw" firstAttribute="leading" secondItem="ZCN-4S-Mjb" secondAttribute="leading" id="7VR-0P-H4G"/>
-                            <constraint firstItem="eW9-RY-pfw" firstAttribute="top" secondItem="tzm-vP-tfm" secondAttribute="top" id="APO-Sl-rrZ"/>
-                            <constraint firstItem="eW9-RY-pfw" firstAttribute="trailing" secondItem="ZCN-4S-Mjb" secondAttribute="trailing" id="FTZ-W3-QQX"/>
-                            <constraint firstItem="eW9-RY-pfw" firstAttribute="bottom" secondItem="ZCN-4S-Mjb" secondAttribute="bottom" id="XYp-g4-Cl6"/>
+                            <constraint firstItem="MNx-hc-een" firstAttribute="top" secondItem="I21-PM-J5g" secondAttribute="top" id="7gP-gh-WTE"/>
+                            <constraint firstItem="MNx-hc-een" firstAttribute="bottom" secondItem="cpv-7h-l9m" secondAttribute="bottom" id="KEh-oL-I9K"/>
+                            <constraint firstItem="MNx-hc-een" firstAttribute="trailing" secondItem="cpv-7h-l9m" secondAttribute="trailing" id="gBt-Mm-Q2T"/>
+                            <constraint firstItem="MNx-hc-een" firstAttribute="leading" secondItem="cpv-7h-l9m" secondAttribute="leading" id="qkU-ol-U91"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="ZCN-4S-Mjb"/>
+                        <viewLayoutGuide key="safeArea" id="cpv-7h-l9m"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="HEX-Oo-hni" userLabel="災害"/>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="fAP-ar-Jzs" userLabel="災害"/>
                     <connections>
-                        <outlet property="disastersTableView" destination="eW9-RY-pfw" id="6Se-58-XdH"/>
+                        <outlet property="disastersTableView" destination="MNx-hc-een" id="edR-8O-Y3k"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9Vi-fC-OYl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="397.60000000000002" y="-530.28485757121439"/>
-        </scene>
-        <!--News-->
-        <scene sceneID="XjO-Tw-Fdz">
-            <objects>
-                <viewController id="1ME-B2-bgC" customClass="NewsViewController" customModule="BOKiN" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="gbk-ix-rnu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="u6g-wA-JTO">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="sectionIndexBackgroundColor" red="0.57281091370558368" green="0.57281091370558368" blue="0.57281091370558368" alpha="0.84705882352941175" colorSpace="custom" customColorSpace="sRGB"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="bAd-Om-Nie" customClass="NewsTableViewCell" customModule="BOKiN" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bAd-Om-Nie" id="ml7-jA-SCp">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="u6g-wA-JTO" firstAttribute="leading" secondItem="cl2-m9-XSo" secondAttribute="leading" id="JfO-nV-ewu"/>
-                            <constraint firstItem="u6g-wA-JTO" firstAttribute="top" secondItem="gbk-ix-rnu" secondAttribute="top" id="LQd-4C-PUs"/>
-                            <constraint firstItem="u6g-wA-JTO" firstAttribute="bottom" secondItem="cl2-m9-XSo" secondAttribute="bottom" id="cIb-aU-KuT"/>
-                            <constraint firstItem="u6g-wA-JTO" firstAttribute="trailing" secondItem="cl2-m9-XSo" secondAttribute="trailing" id="zYt-fg-Hno"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="cl2-m9-XSo"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="News" id="4pc-fO-YGY" userLabel="News"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="newsTableView" destination="u6g-wA-JTO" id="UHL-jZ-vFR"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="j8D-oR-045" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-335.19999999999999" y="17.541229385307346"/>
-        </scene>
-        <!--Item 1-->
-        <scene sceneID="8nn-AN-764">
-            <objects>
-                <viewController id="0QT-fu-w0p" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ZCz-6q-5Bq">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="Q5O-83-92f"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="ITW-aS-eOr" userLabel="不明"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Meb-og-t5u" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="399" y="-1194"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="tVv-xS-D53">
-            <objects>
-                <tabBarController id="cGl-NH-yMq" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fse-kj-Byx">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="0QT-fu-w0p" kind="relationship" relationship="viewControllers" id="Ger-UN-zFG"/>
-                        <segue destination="h3A-GH-77U" kind="relationship" relationship="viewControllers" id="drY-23-pjF"/>
-                        <segue destination="1ME-B2-bgC" kind="relationship" relationship="viewControllers" id="nMl-o1-XWW"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RUl-XV-LQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-555" y="-861"/>
         </scene>
     </scenes>
 </document>
