--- a/BOKiN/View/SettlementModelView/SettlementModel.storyboard
+++ b/BOKiN/View/SettlementModelView/SettlementModel.storyboard
@@ -43,9 +43,6 @@
                                                                 <rect key="frame" x="36.5" y="27.5" width="30" height="45"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                                                 <state key="normal" title="−"/>
-                                                                <connections>
-                                                                    <action selector="minusCharity:" destination="AZ7-Pp-VEt" eventType="touchUpInside" id="gnX-me-Cur"/>
-                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -57,7 +54,7 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VBW-Es-XG6">
                                                         <rect key="frame" x="102.5" y="0.0" width="140" height="100"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tPn-eS-ZIa" customClass="BoundLabel" customModule="BOKiN_Prototype" customModuleProvider="target">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tPn-eS-ZIa" customClass="BoundLabel" customModule="BOKiN" customModuleProvider="target">
                                                                 <rect key="frame" x="42" y="32.5" width="56" height="35"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                                                 <nil key="textColor"/>
@@ -90,9 +87,6 @@
                                                                 <rect key="frame" x="37" y="27.5" width="28.5" height="45"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                                                 <state key="normal" title="+"/>
-                                                                <connections>
-                                                                    <action selector="plusCharity:" destination="AZ7-Pp-VEt" eventType="touchUpInside" id="zKb-aT-bx5"/>
-                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -182,9 +176,6 @@
                                                         <rect key="frame" x="141" y="25" width="62" height="30"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="募金する"/>
-                                                        <connections>
-                                                            <action selector="tapDoCharityButton:" destination="AZ7-Pp-VEt" eventType="touchUpInside" id="Xwg-tt-1Ci"/>
-                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -214,11 +205,6 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TWA-YC-ome"/>
                     </view>
-                    <connections>
-                        <outlet property="backgroundView" destination="IXG-Hi-TJs" id="PhE-CG-BsW"/>
-                        <outlet property="charityMoney" destination="tPn-eS-ZIa" id="YzG-95-JR4"/>
-                        <outlet property="cheerTextField" destination="sdU-Xp-YeN" id="pfz-rF-bwU"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tpR-x7-NJg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
